--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,31 +3,48 @@
 
 <head>
     <meta charset="utf-8">
-    <title>RPG Game</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimum-scale=1, width=device-width, height=device-height">
 </head>
 
 <body>
-    <div id="screen">
-        <div id="rpg-canvas"></div>
-        <div id="gui"></div>
-    </div>
+    <div id="rpg"></div>
+    
     <style>
-        body, html {
+        body,
+        html {
             height: 100%;
+            overflow: hidden;
         }
+
         body {
             margin: 0;
-            background-color: black;
+            background-color: black; 
             display: flex;
             align-items: center;
             justify-content: center;
         }
-        #screen {
+
+        #rpg {
             position: relative;
+            
         }
-        #screen > div {
-            position: absolute;
+
+        @media (min-width: 800px) {
+            #rpg {
+                width: 816px;
+                height: 624px;
+            }
+        }
+
+        @media (max-width: 800px) {
+            #rpg {
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+            }
         }
     </style>
 </body>
